--- a/style.css
+++ b/style.css
@@ -2,4 +2,24 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  background-color: whitesmoke;
 }
+header {
+text-align: center;
+ text-size-adjust: 800px;
+}
+section#featured-property{
+  text-align: center;
+}
+nav {
+  padding: 10px;
+  background-color: grey;
+}
+div {
+  background-color: red;
+  text-align: center;
+  display: inline-block;
+width: 20%;
+margin-left: 50px;
+}
+
